add media screen

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <img class="beck" src="./images/logo/Leo-beck.png" alt="logo">
                     <img class="beck2" src="./images/logo/Leo-beck.png" alt="logo">
                     <img class="front" src="./images/logo/Leo-front.png" alt="logo">
+                    <div class="text"><span>e</span><span>o</span></div>
                 </a>
 
                 <div class="nav-items-cont">
