--- a/index.html
+++ b/index.html
@@ -26,10 +26,52 @@
                     <img class="beck" src="./images/logo/Leo-beck.png" alt="logo">
                     <img class="beck2" src="./images/logo/Leo-beck.png" alt="logo">
                     <img class="front" src="./images/logo/Leo-front.png" alt="logo">
-                    <div class="text"><span>e</span><span>o</span></div>
+                    <div class="text">
+                        <span>e</span>
+                        <span>o</span>
+                    </div>
                 </a>
 
                 <div class="nav-items-cont">
+                    <a href="#header" class="nav-lists nav-icon-controll">
+                        <img class="nav-icons" src="./images/icons/home.svg" alt="icons">home
+                    </a>
+                    <a href="#sale" class="nav-lists nav-icon-controll">
+                        <img class="nav-icons" src="./images/icons/basket.svg" alt="icons">sale
+                    </a>
+                    <a href="#men" class="nav-lists">
+                        <img class="nav-icons" src="./images/icons/men.svg" alt="icons">men
+                    </a>
+                    <a href="#women" class="nav-lists">
+                        <img class="nav-icons" src="./images/icons/women.svg" alt="icons">women
+                    </a>
+                    <a href="#kids" class="nav-lists">
+                        <img class="nav-icons" src="./images/icons/bloom.svg" alt="icons">kids
+                    </a>
+                </div>
+                
+                <div class="nav-items-cont-mob-open">
+                    <div class="top"></div>
+                    <div class="center"></div>
+                    <div class="bottom"></div>
+                </div>
+
+                <div class="nav-items-cont-mob">
+                    <div class="logo">
+                        <img class="beck" src="./images/logo/Leo-beck.png" alt="logo">
+                        <img class="beck2" src="./images/logo/Leo-beck.png" alt="logo">
+                        <img class="front" src="./images/logo/Leo-front.png" alt="logo">
+                        <div class="text">
+                            <span>e</span>
+                            <span>o</span>
+                        </div>
+                    </div>
+
+                    <div class="nav-items-cont-mob-close">
+                        <div class="top"></div>
+                        <div class="center"></div>
+                        <div class="bottom"></div>
+                    </div>
                     <a href="#header" class="nav-lists nav-icon-controll">
                         <img class="nav-icons" src="./images/icons/home.svg" alt="icons">home
                     </a>
