--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./components/card-ui-hover/card-ui-hover.css">
     <!-- fonts -->
     <link rel="stylesheet" href="./fonts/stylesheet.css">
-    <link rel="stylesheet" href="./css/navigation.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./All-media.css">
     <title>shop</title>
 </head>
 
@@ -27,8 +27,8 @@
                     <img class="beck2" src="./images/logo/Leo-beck.png" alt="logo">
                     <img class="front" src="./images/logo/Leo-front.png" alt="logo">
                     <div class="text">
-                        <span>e</span>
-                        <span>o</span>
+                        <div>e</div>
+                        <div>o</div>
                     </div>
                 </a>
                 <div class="header-nav-inner">
