redacted mobil panel and logo

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
                 <a href="./index.html" class="logo">
                     <img class="beck" src="./images/logo/Leo-beck.png" alt="logo">
                     <img class="beck2" src="./images/logo/Leo-beck.png" alt="logo">
-                    <img class="front" src="./images/logo/Leo-front.png" alt="logo">
-                    <div class="text">
-                        <p>e</p>
-                        <p>o</p>
-                    </div>
+                    <img class="front" src="./images/logo/Leo_logo.png" alt="logo">
                 </a>
                 <div class="header-nav-inner">
                     <div class="nav-items-cont">
@@ -56,27 +52,20 @@
                     </label>
 
                     <div class="nav-items-cont-mob-open">
-                        <div class="top"></div>
-                        <div class="center"></div>
-                        <div class="bottom"></div>
+                        <img src="./images/icons/burger-buttone.png" alt="burger-buttone">
                     </div>
 
                     <div class="nav-items-cont-mob">
                         <div class="logo">
                             <img class="beck" src="./images/logo/Leo-beck.png" alt="logo">
                             <img class="beck2" src="./images/logo/Leo-beck.png" alt="logo">
-                            <img class="front" src="./images/logo/Leo-front.png" alt="logo">
-                            <div class="text">
-                                <p>e</p>
-                                <p>o</p>
-                            </div>
+                            <img class="front" src="./images/logo/Leo_logo.png" alt="logo">
                         </div>
 
                         <div class="nav-items-cont-mob-close">
-                            <div class="top"></div>
-                            <div class="center"></div>
-                            <div class="bottom"></div>
+                            <img src="./images/icons/close-icon.png" alt="close-icon">
                         </div>
+
                         <a href="#header" class="nav-lists nav-icon-controll">
                             <img class="nav-icons" src="./images/icons/home.svg" alt="icons">home
                         </a>
@@ -111,7 +100,7 @@
                     </div>
 
                     <label for="serch" class="search">
-                        <input class="inp" type="text" id="serch">
+                        <input class="inp inp-custom-placeholder" type="text">
                         <div class="custom-placeholder">search</div>
                         <img class="search-icon" src="./images/icons/icon-search.png" alt="search">
                     </label>
