--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@
 
             <div class="carousel">
                 <div class="carousel__body">
-                    <div class="carousel__prev"><img src="./components/sliders/icons/arrow-double.svg"
-                            class="far fa-angle-left"></div>
-                    <div class="carousel__next"><img src="./components/sliders/icons/arrow-double.svg"
-                            class="far fa-angle-right"></div>
+                    <div class="carousel__prev"><div></div></div>
+                    <div class="carousel__next"><div></div></div>
                     <div class="carousel__slider">
 
                         <div class="carousel__slider__item">
