--- a/index.html
+++ b/index.html
@@ -19,8 +19,72 @@
 
 <body>
     <div class="parent">
+        <!-- paralax efekt -->
+        <div class="blobs blob_1">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066" d="M47.2,-76.8C61.5,-73.5,73.6,-61.5,78.1,-47.2C82.5,-33,79.5,-16.5,75.2,-2.5C71,11.6,65.6,23.2,59.7,35.1C53.9,47,47.5,59.2,37.5,67.1C27.5,74.9,13.7,78.4,0.7,77.1C-12.3,75.9,-24.6,69.9,-33.9,61.6C-43.1,53.3,-49.3,42.7,-59.3,32C-69.3,21.4,-83,10.7,-84.6,-0.9C-86.2,-12.5,-75.6,-25,-65,-34.6C-54.4,-44.2,-43.8,-50.9,-33,-56.1C-22.2,-61.4,-11.1,-65.2,2.7,-69.9C16.5,-74.6,32.9,-80.1,47.2,-76.8Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 2 -->
+        <div class="blobs blob_2">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M34.4,-57C44.8,-46.9,53.5,-37.6,55.8,-27.1C58.1,-16.5,54.1,-4.7,48.2,4C42.4,12.6,34.8,18.1,27,18.9C19.3,19.7,11.4,15.9,5,18.4C-1.4,20.9,-6.4,29.9,-11.2,31.5C-16,33.1,-20.5,27.4,-30.3,22.6C-40.1,17.8,-55.2,14,-58.2,7.1C-61.3,0.1,-52.3,-9.8,-43.6,-16.3C-35,-22.8,-26.8,-25.8,-19.6,-37.3C-12.3,-48.8,-6.2,-68.9,2.9,-73.4C12,-78,24,-67.1,34.4,-57Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 3 -->
+        <div class="blobs blob_3">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M28.1,-43.7C37.6,-43.2,47.3,-38.1,50.7,-30C54,-22,51,-11,47.8,-1.9C44.5,7.2,41.1,14.5,39,24.7C36.9,35,36.2,48.3,30,54.6C23.7,61,11.8,60.4,4.4,52.7C-3,45,-5.9,30.2,-15.1,25.5C-24.2,20.8,-39.6,26.2,-49.7,23.7C-59.9,21.1,-64.8,10.6,-61.4,2C-58,-6.6,-46.2,-13.2,-42,-26.1C-37.7,-38.9,-41.1,-57.9,-35.4,-60.6C-29.6,-63.3,-14.8,-49.6,-2.8,-44.9C9.3,-40.1,18.6,-44.2,28.1,-43.7Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 4 -->
+        <div class="blobs blob_4">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M23,-38C30,-35.8,36.1,-30.1,47.9,-23.2C59.6,-16.3,77,-8.1,79.8,1.6C82.7,11.4,71,22.8,59,29.3C47,35.8,34.7,37.3,24.8,38.4C14.9,39.5,7.5,40.2,-2.8,45C-13.1,49.8,-26.1,58.8,-37.5,58.6C-48.9,58.4,-58.7,49,-63.5,37.7C-68.2,26.4,-68,13.2,-67.5,0.2C-67.1,-12.7,-66.5,-25.4,-60.9,-35.1C-55.2,-44.8,-44.4,-51.5,-33.4,-51.5C-22.4,-51.4,-11.2,-44.5,-1.6,-41.7C8,-38.9,16,-40.2,23,-38Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 5 -->
+        <div class="blobs blob_5">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M33.3,-47.5C46.5,-49.9,63.1,-48,67,-39.3C70.8,-30.7,61.9,-15.3,62.1,0.1C62.2,15.5,71.3,31,64.1,33.7C56.8,36.5,33.2,26.6,19.8,26.7C6.4,26.7,3.2,36.7,-6.1,47.3C-15.4,57.9,-30.9,69.1,-45.3,69.6C-59.7,70.1,-73.2,60.1,-73,46.7C-72.9,33.3,-59.3,16.7,-51.4,4.6C-43.5,-7.6,-41.4,-15.1,-35.5,-18.1C-29.7,-21.2,-20.1,-19.7,-13.6,-21.2C-7,-22.6,-3.5,-27,3.2,-32.6C10,-38.2,20,-45,33.3,-47.5Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 6 -->
+        <div class="blobs blob_6">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M27.9,-50.5C39.4,-41.6,54.2,-40.7,60.7,-33.6C67.3,-26.5,65.7,-13.3,58,-4.4C50.3,4.4,36.6,8.8,32.1,19.5C27.6,30.2,32.3,47.2,28.5,61.5C24.7,75.7,12.4,87.1,-1.3,89.4C-15,91.7,-30.1,85,-40,74.3C-49.9,63.6,-54.6,48.9,-56.6,35.9C-58.6,22.9,-57.8,11.4,-56.1,1C-54.4,-9.5,-51.8,-18.9,-44.8,-23.3C-37.8,-27.6,-26.4,-26.9,-18.2,-37.7C-10,-48.5,-5,-70.9,1.6,-73.7C8.2,-76.4,16.4,-59.5,27.9,-50.5Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 7 -->
+        <div class="blobs blob_7">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M40,-71.5C46.9,-65.2,44.1,-44.6,46.3,-30.3C48.4,-15.9,55.4,-8,57.5,1.2C59.6,10.4,56.9,20.8,53.4,32.9C50,44.9,45.9,58.7,36.9,55.6C27.9,52.5,13.9,32.6,2.6,28C-8.7,23.4,-17.3,34.2,-24.1,36C-30.9,37.8,-35.9,30.7,-39.6,23.2C-43.4,15.7,-46.1,7.9,-50.3,-2.4C-54.5,-12.7,-60.3,-25.4,-59.5,-38.2C-58.8,-51,-51.6,-63.9,-40.6,-67.9C-29.6,-71.8,-14.8,-66.8,0.9,-68.3C16.5,-69.8,33.1,-77.9,40,-71.5Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!-- 8 -->
+        <div class="blobs blob_8">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#FF0066"
+                    d="M33.5,-56.7C38.1,-55.4,32.8,-35.7,33,-23.1C33.1,-10.6,38.7,-5.3,47,4.8C55.3,14.9,66.3,29.7,62.9,36.8C59.6,43.8,41.9,42.9,29.1,51.2C16.2,59.5,8.1,77,3.4,71C-1.2,65.1,-2.5,35.7,-4.2,21C-6,6.3,-8.2,6.2,-22.2,5.1C-36.1,4.1,-61.6,2,-73.9,-7.1C-86.2,-16.2,-85.2,-32.4,-73.7,-37.8C-62.3,-43.1,-40.4,-37.6,-26.4,-33.4C-12.4,-29.2,-6.2,-26.4,4.1,-33.6C14.5,-40.7,28.9,-57.9,33.5,-56.7Z"
+                    transform="translate(100 100)" />
+            </svg>
+        </div>
+        <!------------------->
         <header id="header">
-            <div class="bg-fon"></div>
+
             <nav class="header-nav">
                 <a href="./index.html" class="logo">
                     <img class="beck" src="./images/logo/Leo-beck.png" alt="logo">
@@ -112,8 +176,12 @@
 
             <div class="carousel">
                 <div class="carousel__body">
-                    <div class="carousel__prev"><div></div></div>
-                    <div class="carousel__next"><div></div></div>
+                    <div class="carousel__prev">
+                        <div></div>
+                    </div>
+                    <div class="carousel__next">
+                        <div></div>
+                    </div>
                     <div class="carousel__slider">
 
                         <div class="carousel__slider__item">
@@ -214,6 +282,7 @@
 
         <main>
             <section class="all-sections sect-sale" id="sale">
+
                 <div class="all-sections-inner">
                     <h2 class="title">sale</h2>
                     <div class="container">
